[package]
name = "alpathfinder"
version = "0.1.0"
authors = ["Kent Rasmussen <hyprkookeez@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
instant = { version = "0.1", features = [ "wasm-bindgen" ] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
