[package]
name = "alpathfinder"
version = "0.1.0"
authors = ["Kent Rasmussen <hyprkookeez@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.105"
web-time = "1.1.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
