[package]
name = "alpathfinder"
version = "0.1.0"
authors = ["Kent Rasmussen <hyprkookeez@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bit-vec = "0.8"
once_cell = "1.21"
petgraph = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0.145"
spade = "2.15"
wasm-bindgen = "0.2"
web-time = "1.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
